# conway_game_c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  game.c  game.h  main.c  main.h  release_compile.sh
